--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==0.9
+Flask==0.12
 Jinja2==2.6
-Werkzeug==0.8.3
+Werkzeug==0.11
 gunicorn==0.17.2
-requests==2.2.1
-simplejson==3.6.0
-beautifulsoup4==4.3.2
-mock==1.0.1
+requests==2.13
+simplejson==3.10.0
+beautifulsoup4==4.5
+nose==1.3
